[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latencylabs"
version = "0.1.0"
description = "A Django-based API for managing devices, metrics, alerts, and users."
authors = [{ name = "eggie-code" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.0",
    "djangorestframework>=3.14",
    "psycopg2-binary>=2.9"
]

[tool.setuptools.packages.find]
where = ["latency_labs"]
